# HATETRIS-public-beamsearch

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: constants.rs  database.rs  emulator.rs  main.rs  masks.rs  neural.rs  pieces.rs  replay.rs  searches.rs  types.rs
