[package]
name = "hatetris-public"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0"
lazy_static = "1.4"
rand = "0.8"
rand_distr = "0.4"

[dependencies.savefile]
version = ">=0.16.2"
default-features = false
features = ["derive"]

[profile.release]
debug = true
